Correções de bugs recebidos do feedback
- TO-DO list v0.1
- Adição do static na classe buttons
- Correção de padronização de código

--- a/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
+++ b/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
@@ -2,9 +2,9 @@
 "Objective" = "Objetivo";
 "Controls" = "Controle";
 "Specials" = "Especiais";
-"Don't let the red balls catch you!! Survive as long as you can." = "Não deixe as bolinhas vermelhas te pegar. Sobreviva o máximo que conseguir.";
-"Swipe on any place at the screen to control your ball, the blue one." = "Deslize nem qualquer lugar da tela para controlar a bolinha.";
-"You have powers!! Catch them when appers on the screen." = "Você tem poderes!! Pega eles quando aparecer na tela.";
+"Don't let the red balls catch you!! Survive as long as you can." = "Não deixe as bolinhas vermelhas te pegarem. Sobreviva o máximo que conseguir.";
+"Swipe on any place at the screen to control your ball, the blue one." = "Deslize em qualquer lugar da tela para controlar a bolinha.";
+"You have powers!! Catch them when appers on the screen." = "Você tem poderes!! Pegue eles quando aparecerem na tela.";
 
 // Tela: Endgame
 "Game Over" = "Fim de Jogo";
