Configurando estado em segundo plano
- Atualização do arquivo .strings que estava dando erro

--- a/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
+++ b/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
@@ -18,4 +18,4 @@
 // Warning - Game Center
 "Game Center not authenticated" = "Game Center não autenticado";
 "Game Center off" = "Game Center desligado";
-"Game Center: Communication error": "Game Center: sem comunicação";
+"Game Center: Communication error" = "Game Center: sem comunicação";
