--- a/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
+++ b/Ball Runner/Ball Runner/Lenguages/pt-BR.lproj/Localization.strings
@@ -1,10 +1,14 @@
+/* Gui Reis    -    gui.sreis25@gmail.com */
+
+
 // Tela: Tutorial
 "Objective" = "Objetivo";
 "Controls" = "Controle";
 "Specials" = "Especiais";
-"Don't let the red balls catch you!! Survive as long as you can." = "Não deixe as bolinhas vermelhas te pegarem. Sobreviva o máximo que conseguir.";
-"Swipe on any place at the screen to control your ball, the blue one." = "Deslize em qualquer lugar da tela para controlar a bolinha.";
-"You have powers!! Catch them when appers." = "Você tem poderes!! Pegue eles quando aparecerem.";
+"Objective-Description" = "Não deixe as bolinhas vermelhas te pegarem. Sobreviva o máximo que conseguir.";
+"Controls-Description" = "Deslize em qualquer lugar da tela para controlar a bolinha.";
+"Specials-Description" = "Você tem poderes!! Pegue eles quando aparecerem.";
+
 
 // Tela: Endgame
 "Game Over" = "Fim de Jogo";
